<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginStart="10dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:elevation="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/categoryIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/ic_community"
                android:layout_gravity="center"
                android:layout_margin="20dp"
                android:contentDescription="@string/category_icon" />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/categoryName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/category_name"/>
                <TextView
                    android:id="@+id/categoryExpense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/expense"/>

                <TextView
                    android:id="@+id/categoryBudget"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/budget"/>
                <TextView
                    android:id="@+id/categoryTransactions"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/transactions"/>
            </LinearLayout>
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1">
                <ImageView
                    android:id="@+id/greenAlert"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_margin="2dp"
                    android:src="@drawable/input_bg"
                    android:contentDescription="@string/indicator" />
                <ImageView
                    android:id="@+id/yellowAlert"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_margin="2dp"
                    android:src="@drawable/input_bg"
                    android:contentDescription="@string/indicator" />
                <ImageView
                    android:id="@+id/redAlert"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_margin="2dp"
                    android:src="@drawable/input_bg"
                    android:contentDescription="@string/indicator" />

            </androidx.appcompat.widget.LinearLayoutCompat>

        </LinearLayout>
</androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>