<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:elevation="10dp"
    android:layout_margin="5dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/categoryIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_food"
                android:layout_margin="10dp"
                android:contentDescription="@string/category_icon" />
            <TextView
                android:id="@+id/categoryName"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textAlignment="center"
                style="@style/TextAppearance.MaterialComponents.Headline6"
                android:text="@string/spending"/>
            <ImageView
                android:id="@+id/forwardArrow"
                android:layout_width="wrap_content"
                android:layout_weight="0.5"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/ic_baseline_arrow_forward_ios_24"
                android:contentDescription="@string/arrow" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/categoryReport"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.github.mikephil.charting.charts.BarChart
                android:id="@+id/categoryBarChart"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                />
        </LinearLayout>
    </LinearLayout>


</androidx.cardview.widget.CardView>

